bug#5349 ALTER TABLE corrupts TEXT (and blob?)